added payment docs

--- a/Calendar/calendar-widget-customization.mdx
+++ b/Calendar/calendar-widget-customization.mdx
@@ -5,19 +5,16 @@ description: "Calendar Widget Customization is designed to give you control over
 
 Calendar Widget Customization is designed to give you control over the appearance and functionality of your widget. With this powerful feature, you can personalize your widget according to your preferences, making it uniquely yours.
 
-----------
+
 
 ## How to Customize Your Widget?
 
--   ## Navigate to Calendar Settings
-    
--   ## Click on "Edit" for the specific calendar you wish to customize
-    
--   ## Head to the "Customizations" tab.  
+- Navigate to Calendar Settings  
+- Click on "Edit" for the specific calendar you wish to customize  
+- Head to the "Customizations" tab.  
 
- >Note: Widget Customizations work **ONLY** with **NEO** **WIDGET**
+ > Note: Widget Customizations work **ONLY** with **NEO** **WIDGET**
 
-----------
 
 **Understanding Customization Options:**
 
@@ -30,7 +27,7 @@ Here, you have the freedom to tailor your calendar widget to suit your preferenc
   
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/155014398017/original/XvNYZLuXiGZTLY-WH9ch3Jt2Lei0XtfQmA.png?1701774357)
 
->Note: When using custom forms, make sure the theme syncs up with your widget customizations for a seamless look.
+> Note: When using custom forms, make sure the theme syncs up with your widget customizations for a seamless look.
 
 ----------
 
@@ -44,7 +41,7 @@ Here, you have the freedom to tailor your calendar widget to suit your preferenc
 
 -   **Hide Calendar Details:** You can now hide the calendar name, description, and details such as duration, date & time, recurring details, and timezone from the left panel.
 
->Note: If you wish not to show the logo, simply remove it from the meeting details tab
+> Note: If you wish not to show the logo, simply remove it from the meeting details tab
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/155014398556/original/SsBTXgr3tI0qRumH1PL4AdbJNGSDBnrWIQ.png?1701774492)
   
@@ -54,7 +51,7 @@ Here, you have the freedom to tailor your calendar widget to suit your preferenc
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/155014008386/original/1VCnPDtft7VclBxvCMTAZoZIjroZE_xmhw.png?1701336017)
 
-## **Frequently Asked Questions (FAQs)**
+## Frequently Asked Questions (FAQs)
 
 **Q: Which calendars support customization?**
 
@@ -73,16 +70,16 @@ A: CSS customizations take precedence over the widget settings. Your custom styl
 A: To fully disable the entire left panel, make sure to check the following settings:
 
 Calendar Details Settings:
--   Disable Calendar Name.
--   Disable Calendar Description.
--   Disable Calendar Details.
+- Disable Calendar Name.
+- Disable Calendar Description.
+- Disable Calendar Details.
 
 Logo Removal:
--   Remove any logo associated with the calendar.
+- Remove any logo associated with the calendar.
 
 Customizations Tab:
--   Disable the "Allow Select Staff" option from the Customizations tab.
+- Disable the "Allow Select Staff" option from the Customizations tab.
 
-## **Pro Tip**
+**Pro Tip**
 
 For the best visual results, we recommend selecting contrasting primary and background colors. Striking a balance between light and dark colors often yields the most aesthetically pleasing outcomes. Experiment with combinations until you find the perfect look for your customized calendar widget.
